Removed account API and replaced with individual routes for tools, papers and projects
